--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -47,6 +47,12 @@
             </a>
         </li>
         <li class="nav-item">
+            <a class="nav-link" routerLink="/delete-requests">
+                <i class="fa fa-trash"></i>
+                <span>Delete Requests</span>
+            </a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" routerLink="/assigned-leads">
                 <i class="fas fa-exchange-alt"></i>
                 <span>Assigned Leads</span>
