--- a/src/app/dashboard/dealerslist/dealerslist.component.html
+++ b/src/app/dashboard/dealerslist/dealerslist.component.html
@@ -13,9 +13,9 @@
                 </div>
                 <div class="row">
                     <div class="col-xl-5 col-lg-5 col-md-7 col-sm-9">
-                        <button class="btn btn-primary ml-1" (click)="createNewContact()"> Create Contact </button>
-                        <button class="btn btn-primary ml-3" (click)="getCsvFile()"> Add Csv File </button>
-                        <button *ngIf=isCsv class="btn btn-primary ml-3" (click)="sendMessage()"> Send Message </button>
+                        <button class="btn btn-primary ml-1" [class.active]="isNewContact" (click)="createNewContact()"> Create Contact </button>
+                        <button class="btn btn-primary ml-3" [class.active]="isCsv" (click)="getCsvFile()"> Add Csv File </button>
+                        <button *ngIf="isCsv && event" class="btn btn-primary ml-3" (click)="sendMessage()"> Send Message </button>
                     </div>
                 </div>
                 <!-- <div class="row mt-1"> -->
