--- a/src/app/dashboard/feedback/feedback.component.html
+++ b/src/app/dashboard/feedback/feedback.component.html
@@ -60,8 +60,8 @@
                                     <div class="col-4 form-group">
                                         <b class="steps">Message</b>
                                         <label for="exampleFormControlTextarea1"></label>
-                                        <angular-editor formControlName="message" [placeholder]="'Enter text here...'" style="height: 200px;"></angular-editor>
-                                        <!-- <textarea class="form-control" formControlName="message" placeholder="Text here" style="height: 200px;"></textarea> -->
+                                        <!-- <angular-editor formControlName="message" [placeholder]="'Enter text here...'" style="height: 200px;"></angular-editor> -->
+                                        <textarea class="form-control" formControlName="message" placeholder="Text here" style="height: 200px;"></textarea>
                                     </div>
                                 </div>
                                 <div class="row">
