--- a/src/app/dashboard/delete-requests/delete-requests.component.html
+++ b/src/app/dashboard/delete-requests/delete-requests.component.html
@@ -21,8 +21,8 @@
                                     <th scope="col">Client Details</th>
                                     <th scope="col">Location</th>
                                     <!-- <th scope="col">Demand</th>
-                                    <th scope="col">Comment</th>
-                                    <th scope="col">Operations</th> -->
+                                    <th scope="col">Comment</th> -->
+                                    <th scope="col">Operations</th>
                                 </thead>
 
                                 <tbody>
@@ -46,6 +46,7 @@
                                         </td>
 
                                         <td>{{ user?.property_type }}</td>
+                                        <td><i class="fas tick fa-check" (click)="confirmID(user?._id)" data-toggle="modal" data-target="#exampleModal1"></i><i class="fas cross fa-times ml-4" (click)="deleteRevert(user?._id)"></i></td>
 
                                     </tr>
                                 </tbody>
@@ -54,6 +55,32 @@
                         <!-- <pagination-controls (pageChange)="p = $event"></pagination-controls> -->
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">
+                    Delete Confirmation
+                </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete it?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                    Close
+                </button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="deleteRow()">
+                    Delete
+                </button>
             </div>
         </div>
     </div>
